package unibo.exiled.model.map;

/**
 * The (x,y) position of a cartesian map.
 * @param x horizontal axis position
 * @param y vertical axis position
 */
public record Position(int x, int y) { }
