@startuml
scale 0.45
set separator none
package unibo.exiled.model{
    package character{
        interface GameCharacter{}
        interface Player implements GameCharacter{}
        interface Enemy implements GameCharacter{}
        interface Attribute{}
    }
    package item{
        interface Item{}
        interface Inventory{}
    }
    package combat{
        interface Combat{}
    }
    package move{
        enum MagicMove{}
        interface MoveSet{}
    }
    package map{
        interface GameMap{}
        enum CellType
        class Position<<Record>>{}
    }
    enum ElementalType{}
}




Player *-- Inventory
GameCharacter o-- Attribute
Inventory o-- Item
Combat o-- GameCharacter
MoveSet o-- MagicMove
GameCharacter *- MoveSet
ElementalType <.. MagicMove
GameCharacter *-- ElementalType : Classe del \n character.
GameMap o-- CellType
GameMap o-- Position
GameCharacter *-- Position
Combat *-- Position
@enduml